--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Alana Nanz | Portfolio</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,18 +14,153 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <script src="https://kit.fontawesome.com/a92f357cc2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="Intro">
+      <h1>Hi! I'm Alana Nanz.</h1>
+      <h2>I'm a Front End Developer seeking a full-time, remote position. Welcome to my portfolio!</h2>
+    </div>
+  </header>
+  <main>
+    <section id="Projects">
+      <h2>Projects</h2>
+      <div class="project-wrapper">
+        <div class="project">
+          <img src="img/unplugged_screenshot.png" alt="website screenshot">
+          <h3>Unplugged Retreat Website</h3>
+          <p class="description">A multi-page responsive website for a retreat center. This versatile design is built with
+            Flexbox and can be repurposed for other sites.</p>
+          <p class="skills">
+            <span>Skills: </span>HTML5, CSS, Flexbox<br>
+            <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
+          </p>
+          <a href="https://github.com/alana-nanz/unplugged-retreat"><button>Live Page</button></a>
+        </div>
+        <div class="project">
+          <img src ="img/gallery_screenshot.png" alt="website screenshot">
+          <h3>Github Repo Gallery</h3>
+          <p class="description">A gallery of repos pulled from my Github profile using Github’s API. Visitors to this site can click to view more details about each repo as well as use the search bar to search for a repo.</p>
+          <p class="skills">
+            <span>Skills: </span>Javascript, REST API<br>
+            <span>Tools: </span>Github Pages, Visual Studio Code
+          </p>
+          <a href="https://github.com/alana-nanz/github-repo-gallery"><button>Live Page</button></a>
+        </div>
+        <div class="project">
+          <img src="img/guess_screenshot.png" alt="website screenshot">
+          <h3>Guess the Word Game</h3>
+          <p class="description">A game built with Javascript where players have 8 attempts to guess the random word, one letter at a time.</p>
+          <p class="skills">
+            <span>Skills: </span>Javascript, REST API<br>
+            <span>Tools: </span>JSON, Github Pages
+          </p>
+          <a href="https://github.com/alana-nanz/guess-the-word"><button>Live Page</button></a>
+        </div>
+        <div class="project">
+          <img src="img/sticky_screenshot.png" alt="website screenshot">
+          <h3>Sticky Notes App</h3>
+          <p class="description">A Sticky Notes App built with React as a greenfield project. w/options to search, delete and create notes. It uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
+          <p class="skills">
+            <span>Skills: </span>React, JSX, Components<br>
+            <span>Tools: </span>CodeSandbox, Props, State
+          </p>
+          <a href="https://github.com/alana-nanz/sticky-notes"><button>Live Page</button></a>
+        </div>
+        <div class="project">
+          <img src="img/rogue_screenshot.png" alt="website screenshot">
+          <h3>Rogue Pickings Homepage</h3>
+          <p class="description">Responsive homepage built with Flexbox. After originally creating it as a static site, I used a mobile-first approach to transform it into a responsive site.</p>
+          <p class="skills">
+            <span>Skills: </span>HTML5, CSS, Flexbox<br>
+            <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
+          </p>
+          <a href="https://github.com/alana-nanz/rogue-pickings"><button>Live Page</button></a>
+        </div>
+      </div>
+    </section>
+    <section id="Skills">
+      <h2>Skills</h2>
+      <h3>Developer Skills</h3>
+      <div class="skills-wraper">
+        <p class="skill">HTML5 & CSS</p>
+        <p class="skill">Responsive Web Development</p>
+        <p class="skill">Javascript</p>
+        <p class="skill">APIs</p>
+        <p class="skill">React</p>
+      </div>
+      <h3>Tech Stack</h3>
+      <div class="skills-wraper">
+        <p class="skill">Git & Github</p>
+        <p class="skill">Photoshop</p>
+        <p class="skill">Chrome DevTools</p>
+        <p class="skill">Visual Studio Code</p>
+        <p class="skill">Code Sandbox</p>
+      </div>
+    </section>
+    <section id="About">
+      <div class="about-wrapper">
+        <img src="img/headshot.png" alt="headshot">
+        <div class="about-description-wrapper">
+          <h1>Hi! I'm Alana Nanz.</h1>
+          <h2>I'm a Front End Developer that loves clean and elegant code.</h2>
+          <p>I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm buildling puzzles, trying new recipes and chasing my two-year-old daughter and bernedoodle around our back yard.</p>
+          <p><strong>I can't wait to work with you!</strong></p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <h1>Let's Connect</h1>
+    <div class="contact-wrapper">
+      <div class="contact-section">
+        <h2>Hire me</h2>
+        <address>
+          <p>386-793-6423</p>
+          <a href="mailto:readalana@gmail.com">readalana@gmail.com</a>
+        </address>
+      </div>
+      <div class="contact-section">
+        <h2>Follow me</h2>
+        <div class="social">
+          <p>
+            <a href="https://www.linkedin.com/in/alanananz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          </p>
+          <p>
+            <a href="https://github.com/alana-nanz" target="_blank"><i class="fab fa-github"></i></a>
+          </p>
+        </div>
+      </div>
+      <div class="contact-section">
+        <h2>Meet me</h2>
+        <p>Raleigh, NC<br>
+        Let's grab coffee or go to a meetup!</p>
+      </div>
+    </div>
+    <p class="copyright">Copyright 2022 | Alana Nanz</p>
+  </footer>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+
+
+
+  
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
