--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
   <meta name="theme-color" content="#fafafa">
 
   <script src="https://kit.fontawesome.com/a92f357cc2.js" crossorigin="anonymous"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alike&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#Skills">Skills</a></li>
-        <li><a href="#About">About</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><button class="header-button"><a href="#projects">Projects</a></button></li>
+        <li><button class="header-button"><a href="#skills">Skills</a></button></li>
+        <li><button class="header-button"><a href="#about">About</a></button></li>
+        <li><button id="contact-button"><a id="contact-font" href="#contact">Contact Me</a></button></li>
       </ul>
     </nav>
     <div class="Intro">
@@ -39,11 +43,11 @@
     </div>
   </header>
   <main>
-    <section id="Projects">
-      <h2>Projects</h2>
+    <section id="projects">
+      <h1>Projects</h1>
       <div class="project-wrapper">
         <div class="project">
-          <img src="img/unplugged_screenshot.png" alt="website screenshot">
+          <a href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank"><img src="img/unplugged_screenshot.png" alt="website screenshot"></a>
           <h3>Unplugged Retreat Website</h3>
           <p class="description">A multi-page responsive website for a retreat center. This versatile design is built with
             Flexbox and can be repurposed for other sites.</p>
@@ -51,53 +55,73 @@
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
             <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
           </p>
-          <a href="https://github.com/alana-nanz/unplugged-retreat"><button>Live Page</button></a>
+          <div class="link">
+            <button class="live-page-link">
+              <a class="project-link" href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank">Live Page</a>
+            </button>
+          </div>
         </div>
         <div class="project">
-          <img src ="img/gallery_screenshot.png" alt="website screenshot">
+          <a href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank"><img src ="img/gallery_screenshot.png" alt="website screenshot"></a>
           <h3>Github Repo Gallery</h3>
           <p class="description">A gallery of repos pulled from my Github profile using Github’s API. Visitors to this site can click to view more details about each repo as well as use the search bar to search for a repo.</p>
           <p class="skills">
             <span>Skills: </span>Javascript, REST API<br>
             <span>Tools: </span>Github Pages, Visual Studio Code
           </p>
-          <a href="https://github.com/alana-nanz/github-repo-gallery"><button>Live Page</button></a>
+          <div class="link">
+            <button class="live-page-link">
+              <a class="project-link" href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank">Live Page</a>
+            </button>
+          </div>
         </div>
         <div class="project">
-          <img src="img/guess_screenshot.png" alt="website screenshot">
+          <a href="https://alana-nanz.github.io/guess-the-word/" target="_blank"><img src="img/guess_screenshot.png" alt="website screenshot"></a>
           <h3>Guess the Word Game</h3>
           <p class="description">A game built with Javascript where players have 8 attempts to guess the random word, one letter at a time.</p>
           <p class="skills">
             <span>Skills: </span>Javascript, REST API<br>
             <span>Tools: </span>JSON, Github Pages
           </p>
-          <a href="https://github.com/alana-nanz/guess-the-word"><button>Live Page</button></a>
+          <div class="link">
+            <button class="live-page-link">
+              <a class="project-link" href="https://alana-nanz.github.io/guess-the-word/" target="_blank">Live Page</a>
+            </button>
+          </div>
         </div>
         <div class="project">
-          <img src="img/sticky_screenshot.png" alt="website screenshot">
+          <a href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank"><img src="img/sticky_screenshot.png" alt="website screenshot"></a>
           <h3>Sticky Notes App</h3>
           <p class="description">A Sticky Notes App built with React as a greenfield project. w/options to search, delete and create notes. It uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
           <p class="skills">
             <span>Skills: </span>React, JSX, Components<br>
             <span>Tools: </span>CodeSandbox, Props, State
           </p>
-          <a href="https://github.com/alana-nanz/sticky-notes"><button>Live Page</button></a>
+          <div class="link">
+            <button class="live-page-link">
+              <a class="project-link" href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank">Live Page</a>
+            </button>
+          </div>
         </div>
         <div class="project">
-          <img src="img/rogue_screenshot.png" alt="website screenshot">
+          <a href="https://alana-nanz.github.io/rogue-pickings/" target="_blank"><img src="img/rogue_screenshot.png" alt="website screenshot"></a>
           <h3>Rogue Pickings Homepage</h3>
           <p class="description">Responsive homepage built with Flexbox. After originally creating it as a static site, I used a mobile-first approach to transform it into a responsive site.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
             <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
           </p>
-          <a href="https://github.com/alana-nanz/rogue-pickings"><button>Live Page</button></a>
+          <div class="link">
+            <button class="live-page-link">
+              <a class="project-link" href="https://alana-nanz.github.io/rogue-pickings/" target="_blank">Live Page</a>
+            </button>
+          </div>
         </div>
       </div>
     </section>
-    <section id="Skills">
-      <h2>Skills</h2>
-      <h3>Developer Skills</h3>
+    <section id="skills">
+      <h1>Skills</h1>
+      <h4>Developer Skills</h4>
       <div class="skills-wraper">
         <p class="skill">HTML5 & CSS</p>
         <p class="skill">Responsive Web Development</p>
@@ -105,7 +129,7 @@
         <p class="skill">APIs</p>
         <p class="skill">React</p>
       </div>
-      <h3>Tech Stack</h3>
+      <h4>Tech Stack</h4>
       <div class="skills-wraper">
         <p class="skill">Git & Github</p>
         <p class="skill">Photoshop</p>
@@ -114,7 +138,7 @@
         <p class="skill">Code Sandbox</p>
       </div>
     </section>
-    <section id="About">
+    <section id="about">
       <div class="about-wrapper">
         <img src="img/headshot.png" alt="headshot">
         <div class="about-description-wrapper">
@@ -126,7 +150,7 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer id="contact">
     <h1>Let's Connect</h1>
     <div class="contact-wrapper">
       <div class="contact-section">
