Adjusted mobile padding on sections

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         <div class="project">
           <a href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank"><img src="img/unplugged_screenshot.png" alt="website screenshot"></a>
           <h3>Unplugged Retreat Website</h3>
-          <p class="description">A multi-page responsive website for a retreat center. This versatile design is built with
-            Flexbox and can be repurposed for other sites.</p>
+          <p class="description">A multi-page responsive website for a retreat center. This versatile design is built with Flexbox and can be repurposed for other sites.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
             <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
@@ -92,7 +91,7 @@
         <div class="project">
           <a href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank"><img src="img/sticky_screenshot.png" alt="website screenshot"></a>
           <h3>Sticky Notes App</h3>
-          <p class="description">A Sticky Notes App built with React as a greenfield project. w/options to search, delete and create notes. It uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
+          <p class="description">A Sticky Notes App built with React as a greenfield project. It uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
           <p class="skills">
             <span>Skills: </span>React, JSX, Components<br>
             <span>Tools: </span>CodeSandbox, Props, State
@@ -143,8 +142,8 @@
         <img id="headshot" src="img/headshot.png" alt="headshot">
         <div class="about-description-wrapper">
           <h1>Hi! I'm Alana Nanz.</h1>
-          <h2 id="about-description">I'm a Front End Developer who loves creating clean, responsive websites.</h2>
-          <p class="about-text">I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm buildling puzzles, trying new recipes and chasing my two-year-old daughter and bernedoodle around our back yard.<br><br><strong>I can't wait to work with you!</strong></p>
+          <h2 id="about-description">I'm a Front End Developer who creates clean, responsive websites.</h2>
+          <p class="about-text">I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood and learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm buildling puzzles, trying new recipes and chasing my two-year-old daughter and bernedoodle around our back yard.<br><br><strong>I can't wait to work with you!</strong></p>
         </div>
       </div>
     </section>
