Added tablet styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </ul>
     </nav>
     <div class="Intro">
-      <h1>Hi! I'm Alana Nanz.</h1>
+      <h1 id="introduction">Hi! I'm Alana Nanz.</h1>
       <h2>I'm a Front End Developer seeking a full-time, remote position. Welcome to my portfolio!</h2>
     </div>
   </header>
@@ -49,7 +49,7 @@
         <div class="project">
           <a href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank"><img src="img/unplugged_screenshot.png" alt="website screenshot"></a>
           <h3>Unplugged Retreat Website</h3>
-          <p class="description">A multi-page responsive website for a retreat center. This versatile design is built with Flexbox and can be repurposed for other sites.</p>
+          <p class="description">A multi-page responsive website for a retreat center. This versatile design with several sections is built with Flexbox and can be repurposed for different sites.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
             <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
@@ -63,7 +63,7 @@
         <div class="project">
           <a href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank"><img src ="img/gallery_screenshot.png" alt="website screenshot"></a>
           <h3>Github Repo Gallery</h3>
-          <p class="description">A gallery of repos pulled from my Github profile using Github’s API. Visitors to this site can click to view more details about each repo as well as use the search bar to search for a repo.</p>
+          <p class="description">A gallery of Github profile repos using Github’s API. Visitors to this site can click to view more details about each repo and use the search bar to search for a repo.</p>
           <p class="skills">
             <span>Skills: </span>Javascript, REST API<br>
             <span>Tools: </span>Github Pages, Visual Studio Code
@@ -77,7 +77,7 @@
         <div class="project">
           <a href="https://alana-nanz.github.io/guess-the-word/" target="_blank"><img src="img/guess_screenshot.png" alt="website screenshot"></a>
           <h3>Guess the Word Game</h3>
-          <p class="description">A game built with Javascript where players have 8 attempts to guess the random word, one letter at a time.</p>
+          <p class="description">Players guess the random word by entering one letter at a time. If the player guesses all the letters correctly before they use up their 8 alloted guesses, they win!</p>
           <p class="skills">
             <span>Skills: </span>Javascript, REST API<br>
             <span>Tools: </span>JSON, Github Pages
@@ -91,7 +91,7 @@
         <div class="project">
           <a href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank"><img src="img/sticky_screenshot.png" alt="website screenshot"></a>
           <h3>Sticky Notes App</h3>
-          <p class="description">A Sticky Notes App built with React as a greenfield project. It uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
+          <p class="description">This greenfield project coded with React uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
           <p class="skills">
             <span>Skills: </span>React, JSX, Components<br>
             <span>Tools: </span>CodeSandbox, Props, State
@@ -121,16 +121,16 @@
     <section id="skills">
       <h1>Skills</h1>
       <h4>Developer Skills</h4>
-      <div class="skills-wraper">
+      <div class="skills-wrapper">
         <p class="skill">HTML5 & CSS</p>
         <p class="skill">Responsive Web Development</p>
         <p class="skill">Javascript</p>
         <p class="skill">APIs</p>
         <p class="skill">React</p>
+        <p class="skill">Git & Github</p>
       </div>
       <h4>Tech Stack</h4>
-      <div class="skills-wraper">
-        <p class="skill">Git & Github</p>
+      <div class="skills-wrapper">
         <p class="skill">Photoshop</p>
         <p class="skill">Chrome DevTools</p>
         <p class="skill">Visual Studio Code</p>
