Added Desktop styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p class="description">A multi-page responsive website for a retreat center. This versatile design with several sections is built with Flexbox and can be repurposed for different sites.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
-            <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
+            <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, Github
           </p>
           <div class="link">
             <button class="live-page-link">
@@ -65,8 +65,8 @@
           <h3>Github Repo Gallery</h3>
           <p class="description">A gallery of Github profile repos using Github’s API. Visitors to this site can click to view more details about each repo and use the search bar to search for a repo.</p>
           <p class="skills">
-            <span>Skills: </span>Javascript, REST API<br>
-            <span>Tools: </span>Github Pages, Visual Studio Code
+            <span>Skills: </span>Javascript<br>
+            <span>Tools: </span>Github Pages, VS Code, REST API
           </p>
           <div class="link">
             <button class="live-page-link">
@@ -79,8 +79,8 @@
           <h3>Guess the Word Game</h3>
           <p class="description">Players guess the random word by entering one letter at a time. If the player guesses all the letters correctly before they use up their 8 alloted guesses, they win!</p>
           <p class="skills">
-            <span>Skills: </span>Javascript, REST API<br>
-            <span>Tools: </span>JSON, Github Pages
+            <span>Skills: </span>Javascript<br>
+            <span>Tools: </span>JSON, Github Pages, CodeSandbox, REST API
           </p>
           <div class="link">
             <button class="live-page-link">
@@ -108,7 +108,7 @@
           <p class="description">Responsive homepage built with Flexbox. After originally creating it as a static site, I used a mobile-first approach to transform it into a responsive site.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
-            <span>Tools: </span>Photoshop, Visual Studio Code, Chrome DevTools, Github
+            <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, Github
           </p>
           <div class="link">
             <button class="live-page-link">
@@ -141,9 +141,9 @@
       <div class="about-wrapper">
         <img id="headshot" src="img/headshot.png" alt="headshot">
         <div class="about-description-wrapper">
-          <h1>Hi! I'm Alana Nanz.</h1>
+          <h1 id="about-intro">Hi! I'm Alana Nanz.</h1>
           <h2 id="about-description">I'm a Front End Developer who creates clean, responsive websites.</h2>
-          <p class="about-text">I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood and learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm buildling puzzles, trying new recipes and chasing my two-year-old daughter and bernedoodle around our back yard.<br><br><strong>I can't wait to work with you!</strong></p>
+          <p class="about-text">I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood and learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm buildling puzzles, trying new recipes and playing with my two-year-old daughter and bernedoodle with my wonderful husband.<br><br><strong>I can't wait to work with you!</strong></p>
         </div>
       </div>
     </section>
