--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -31,10 +31,10 @@
   <header>
     <nav>
       <ul>
-        <li><button class="header-button"><a href="#projects">Projects</a></button></li>
-        <li><button class="header-button"><a href="#skills">Skills</a></button></li>
-        <li><button class="header-button"><a href="#about">About</a></button></li>
-        <li><button id="contact-button"><a id="contact-font" href="#contact">Contact Me</a></button></li>
+        <li><a class="header-button" href="#projects">Projects</a></li>
+        <li><a class="header-button" href="#skills">Skills</a></li>
+        <li><a class="header-button" href="#about">About</a></li>
+        <li><a id="contact-button" href="#contact">Contact Me</a></li>
       </ul>
     </nav>
     <div class="Intro">
@@ -44,83 +44,73 @@
   </header>
   <main>
     <section id="projects">
-      <h1>Projects</h1>
+      <h3>Projects</h3>
       <div class="project-wrapper">
         <div class="project">
           <a href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank"><img src="img/unplugged_screenshot.png" alt="website screenshot"></a>
-          <h3>Unplugged Retreat Website</h3>
+          <h4>Unplugged Retreat Website</h4>
           <p class="description">A multi-page responsive website for a retreat center. This versatile design with several sections is built with Flexbox and can be repurposed for different sites.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
             <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, Github
           </p>
           <div class="link">
-            <button class="live-page-link">
-              <a class="project-link" href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank">Live Page</a>
-            </button>
+            <a class="project-link" href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank">Live Page</a>
           </div>
         </div>
         <div class="project">
           <a href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank"><img src ="img/gallery_screenshot.png" alt="website screenshot"></a>
-          <h3>Github Repo Gallery</h3>
+          <h4>Github Repo Gallery</h4>
           <p class="description">A gallery of Github profile repos using Github’s API. Visitors to this site can click to view more details about each repo and use the search bar to search for a repo.</p>
           <p class="skills">
             <span>Skills: </span>Javascript<br>
             <span>Tools: </span>Github Pages, VS Code, REST API
           </p>
           <div class="link">
-            <button class="live-page-link">
-              <a class="project-link" href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank">Live Page</a>
-            </button>
+            <a class="project-link" href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank">Live Page</a>
           </div>
         </div>
         <div class="project">
           <a href="https://alana-nanz.github.io/guess-the-word/" target="_blank"><img src="img/guess_screenshot.png" alt="website screenshot"></a>
-          <h3>Guess the Word Game</h3>
+          <h4>Guess the Word Game</h4>
           <p class="description">Players guess the random word by entering one letter at a time. If the player guesses all the letters correctly before they use up their 8 alloted guesses, they win!</p>
           <p class="skills">
             <span>Skills: </span>Javascript<br>
             <span>Tools: </span>JSON, Github Pages, CodeSandbox, REST API
           </p>
           <div class="link">
-            <button class="live-page-link">
-              <a class="project-link" href="https://alana-nanz.github.io/guess-the-word/" target="_blank">Live Page</a>
-            </button>
+            <a class="project-link" href="https://alana-nanz.github.io/guess-the-word/" target="_blank">Live Page</a>
           </div>
         </div>
         <div class="project">
           <a href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank"><img src="img/sticky_screenshot.png" alt="website screenshot"></a>
-          <h3>Sticky Notes App</h3>
+          <h4>Sticky Notes App</h4>
           <p class="description">This greenfield project coded with React uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
           <p class="skills">
             <span>Skills: </span>React, JSX, Components<br>
             <span>Tools: </span>CodeSandbox, Props, State
           </p>
           <div class="link">
-            <button class="live-page-link">
-              <a class="project-link" href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank">Live Page</a>
-            </button>
+            <a class="project-link" href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank">Live Page</a>
           </div>
         </div>
         <div class="project">
           <a href="https://alana-nanz.github.io/rogue-pickings/" target="_blank"><img src="img/rogue_screenshot.png" alt="website screenshot"></a>
-          <h3>Rogue Pickings Homepage</h3>
+          <h4>Rogue Pickings Homepage</h4>
           <p class="description">Responsive homepage built with Flexbox. After originally creating it as a static site, I used a mobile-first approach to transform it into a responsive site.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
             <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, Github
           </p>
           <div class="link">
-            <button class="live-page-link">
-              <a class="project-link" href="https://alana-nanz.github.io/rogue-pickings/" target="_blank">Live Page</a>
-            </button>
+            <a class="project-link" href="https://alana-nanz.github.io/rogue-pickings/" target="_blank">Live Page</a>
           </div>
         </div>
       </div>
     </section>
     <section id="skills">
-      <h1>Skills</h1>
-      <h4>Developer Skills</h4>
+      <h3>Skills</h3>
+      <h5>Developer Skills</h5>
       <div class="skills-wrapper">
         <p class="skill">HTML5 & CSS</p>
         <p class="skill">Responsive Web Development</p>
@@ -129,7 +119,7 @@
         <p class="skill">React</p>
         <p class="skill">Git & Github</p>
       </div>
-      <h4>Tech Stack</h4>
+      <h5>Tech Stack</h5>
       <div class="skills-wrapper">
         <p class="skill">Photoshop</p>
         <p class="skill">Chrome DevTools</p>
@@ -141,18 +131,18 @@
       <div class="about-wrapper">
         <img id="headshot" src="img/headshot.png" alt="headshot">
         <div class="about-description-wrapper">
-          <h1 id="about-intro">Hi! I'm Alana Nanz.</h1>
-          <h2 id="about-description">I'm a Front End Developer who creates clean, responsive websites.</h2>
+          <h3 id="about-intro">Hi! I'm Alana Nanz.</h3>
+          <h4 id="about-description">I'm a Front End Developer who creates clean, responsive websites.</h4>
           <p class="about-text">I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood and learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm buildling puzzles, trying new recipes and playing with my two-year-old daughter and bernedoodle with my wonderful husband.<br><br><strong>I can't wait to work with you!</strong></p>
         </div>
       </div>
     </section>
   </main>
   <footer id="contact">
-    <h1>Let's Connect</h1>
+    <h3>Let's Connect</h3>
     <div class="contact-wrapper">
       <div class="contact-section">
-        <h2 class="contact-heading">Hire me</h2>
+        <h4 class="contact-heading">Hire me</h4>
         <address>
           <p class="contact-info">386-793-6423
             <br>
@@ -161,7 +151,7 @@
         </address>
       </div>
       <div class="contact-section">
-        <h2 class="contact-heading">Follow me</h2>
+        <h4 class="contact-heading">Follow me</h4>
         <div class="social">
           <p>
             <a href="https://www.linkedin.com/in/alanananz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -172,7 +162,7 @@
         </div>
       </div>
       <div class="contact-section">
-        <h2 class="contact-heading">Meet me</h2>
+        <h4 class="contact-heading">Meet me</h4>
         <p  class="contact-info">Raleigh, NC<br>
         Let's grab coffee <br>or go to a meetup!</p>
       </div>
