Fixed typo in about paragraph

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="about-description-wrapper">
           <h3 id="about-intro">Hi! I'm Alana Nanz.</h3>
           <h4 id="about-description">I'm a Front End Developer who creates clean, responsive websites.</h4>
-          <p class="about-text">I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood and learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm buildling puzzles, trying new recipes and playing with my two-year-old daughter and bernedoodle with my wonderful husband.<br><br><strong>I can't wait to work with you!</strong></p>
+          <p class="about-text">I come to the tech field with a background in performing arts administration. I've always been creative, with a strong eye for detail. After working with platforms like WordPress and Drupal, I decided I wanted to see what's under the hood and learn how to code. After creating my first website from scratch, I was hooked! When I'm not coding, I'm building puzzles, trying new recipes and playing with my two-year-old daughter and bernedoodle with my wonderful husband.<br><br><strong>I can't wait to work with you!</strong></p>
         </div>
       </div>
     </section>
