Update Sticky Notes live page link and order of skills

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="project">
-          <a href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank"><img src="img/sticky_screenshot.png" alt="website screenshot"></a>
+          <a href="https://guowmg.csb.app/" target="_blank"><img src="img/sticky_screenshot.png" alt="website screenshot"></a>
           <h4>Sticky Notes App</h4>
           <p class="description">This greenfield project coded with React uses multiple components to build a classic sticky note UI with the ability to add, edit, delete and search for notes.</p>
           <p class="skills">
@@ -91,7 +91,7 @@
             <span>Tools: </span>CodeSandbox, Props, State
           </p>
           <div class="link">
-            <a class="project-link" href="https://codesandbox.io/s/sticky-notes-final-guowmg" target="_blank">Live Page</a>
+            <a class="project-link" href="https://guowmg.csb.app/" target="_blank">Live Page</a>
           </div>
         </div>
         <div class="project">
@@ -112,12 +112,13 @@
       <h3>Skills</h3>
       <h5>Developer Skills</h5>
       <div class="skills-wrapper">
+        <p class="skill">React</p>
+        <p class="skill">Javascript</p>
+        <p class="skill">Git & Github</p>
         <p class="skill">HTML5 & CSS</p>
         <p class="skill">Responsive Web Development</p>
-        <p class="skill">Javascript</p>
         <p class="skill">APIs</p>
-        <p class="skill">React</p>
-        <p class="skill">Git & Github</p>
+
       </div>
       <h5>Tech Stack</h5>
       <div class="skills-wrapper">
