Fixed spelling on GitHub and JavaScript

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <h4>Github Repo Gallery</h4>
           <p class="description">A gallery of Github profile repos using Github’s API. Visitors to this site can click to view more details about each repo and use the search bar to search for a repo.</p>
           <p class="skills">
-            <span>Skills: </span>Javascript<br>
-            <span>Tools: </span>Github Pages, VS Code, REST API
+            <span>Skills: </span>JavaScript<br>
+            <span>Tools: </span>GitHub Pages, VS Code, REST API
           </p>
           <div class="link">
             <a class="project-link" href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank">Live Page</a>
@@ -75,8 +75,8 @@
           <h4>Guess the Word Game</h4>
           <p class="description">Players guess the random word by entering one letter at a time. If the player guesses all the letters correctly before they use up their 8 alloted guesses, they win!</p>
           <p class="skills">
-            <span>Skills: </span>Javascript<br>
-            <span>Tools: </span>JSON, Github Pages, CodeSandbox, REST API
+            <span>Skills: </span>JavaScript<br>
+            <span>Tools: </span>JSON, GitHub Pages, CodeSandbox, REST API
           </p>
           <div class="link">
             <a class="project-link" href="https://alana-nanz.github.io/guess-the-word/" target="_blank">Live Page</a>
@@ -100,7 +100,7 @@
           <p class="description">Responsive homepage built with Flexbox. After originally creating it as a static site, I used a mobile-first approach to transform it into a responsive site.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
-            <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, Github
+            <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, GitHub
           </p>
           <div class="link">
             <a class="project-link" href="https://alana-nanz.github.io/rogue-pickings/" target="_blank">Live Page</a>
@@ -113,8 +113,8 @@
       <h5>Developer Skills</h5>
       <div class="skills-wrapper">
         <p class="skill">React</p>
-        <p class="skill">Javascript</p>
-        <p class="skill">Git & Github</p>
+        <p class="skill">JavaScript</p>
+        <p class="skill">Git & GitHub</p>
         <p class="skill">HTML5 & CSS</p>
         <p class="skill">Responsive Web Development</p>
         <p class="skill">APIs</p>
