Added flexbox to .header-wrapper and .intro

--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
 
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a class="header-button" href="#projects">Projects</a></li>
-        <li><a class="header-button" href="#skills">Skills</a></li>
-        <li><a class="header-button" href="#about">About</a></li>
-        <li><a id="contact-button" href="#contact">Contact Me</a></li>
-      </ul>
-    </nav>
-    <div class="Intro">
-      <h1 id="introduction">Hi! I'm Alana Nanz.</h1>
-      <h2>I'm a Front End Developer seeking a full-time, remote position. Welcome to my portfolio!</h2>
+    <div class="header-wrapper">
+      <nav>
+        <ul>
+          <li><a class="header-button" href="#projects">Projects</a></li>
+          <li><a class="header-button" href="#skills">Skills</a></li>
+          <li><a class="header-button" href="#about">About</a></li>
+          <li><a id="contact-button" href="#contact">Contact Me</a></li>
+        </ul>
+      </nav>
+      <div class="intro">
+        <h1 id="introduction">Hi! I'm Alana Nanz.</h1>
+        <h2>I'm a Front End Developer seeking a full-time, remote position. Welcome to my portfolio!</h2>
+      </div>
     </div>
   </header>
   <main>
