--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <p class="description">A multi-page responsive website for a retreat center. This versatile design with several sections is built with Flexbox and can be repurposed for different sites.</p>
           <p class="skills">
             <span>Skills: </span>HTML5, CSS, Flexbox<br>
-            <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, Github
+            <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, GitHub
           </p>
           <div class="link">
             <a class="project-link" href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank">Live Page</a>
@@ -62,8 +62,8 @@
         </div>
         <div class="project">
           <a href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank"><img src ="img/gallery_screenshot.png" alt="website screenshot"></a>
-          <h4>Github Repo Gallery</h4>
-          <p class="description">A gallery of Github profile repos using Github’s API. Visitors to this site can click to view more details about each repo and use the search bar to search for a repo.</p>
+          <h4>GitHub Repo Gallery</h4>
+          <p class="description">A gallery of GitHub profile repos using GitHub’s API. Visitors to this site can click to view more details about each repo and use the search bar to search for a repo.</p>
           <p class="skills">
             <span>Skills: </span>JavaScript<br>
             <span>Tools: </span>GitHub Pages, VS Code, REST API
