Added CodePen to skills

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <p class="skill">Chrome DevTools</p>
         <p class="skill">Visual Studio Code</p>
         <p class="skill">Code Sandbox</p>
+        <p class="skill">CodePen</p>
       </div>
     </section>
     <section id="about">
