Changed favicon and opening intro

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -40,7 +40,7 @@
       </nav>
       <div class="intro">
         <h1 id="introduction">Hi! I'm Alana Nanz.</h1>
-        <h2>I'm a Front End Developer seeking a full-time, remote position. Welcome to my portfolio!</h2>
+        <h2>I'm a Front End Developer specializing in responsive web design. Welcome to my portfolio!</h2>
       </div>
     </div>
   </header>
