Added church website to projects

--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
           </div>
         </div>
         <div class="project">
+          <a href="https://covpcfm.com/covenant/" target="_blank"><img src="img/covenant.png" alt="website screenshot"></a>
+          <h4>Church Website</h4>
+          <p class="description">WordPress website for church client built with Bradbury theme, plugins and widgets.</p>
+          <p class="skills">
+            <span>Skills: </span>HTML, CSS<br>
+            <span>Tools: </span>WordPress
+          </p>
+          <div class="link">
+            <a class="project-link" href="https://covpcfm.com/covenant/" target="_blank">Live Page</a>
+          </div>
+        </div>
+        <div class="project">
           <a href="https://alana-nanz.github.io/guess-the-word/" target="_blank"><img src="img/guess_screenshot.png" alt="website screenshot"></a>
           <h4>Guess the Word Game</h4>
           <p class="description">Players guess the random word by entering one letter at a time. If the player guesses all the letters correctly before they use up their 8 alloted guesses, they win!</p>
