Added WordPress to tech stack

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <p class="skill">Photoshop</p>
         <p class="skill">Chrome DevTools</p>
         <p class="skill">Visual Studio Code</p>
+        <p class="skill">WordPress</p>
         <p class="skill">Code Sandbox</p>
         <p class="skill">CodePen</p>
       </div>
