Changed church website description

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="project">
           <a href="https://covpcfm.com/covenant/" target="_blank"><img src="img/covenant.png" alt="website screenshot"></a>
           <h4>Church Website</h4>
-          <p class="description">WordPress website for church client built with Bradbury theme, plugins and widgets.</p>
+          <p class="description">WordPress website for church client. I overhauled their wesite in 2021 with a new theme, layout, plugins and widgets.</p>
           <p class="skills">
             <span>Skills: </span>HTML, CSS<br>
             <span>Tools: </span>WordPress
