Changed LIVE PAGE to VIEW PROJECT

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, GitHub
           </p>
           <div class="link">
-            <a class="project-link" href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank">Live Page</a>
+            <a class="project-link" href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank">View Project</a>
           </div>
         </div>
         <div class="project">
@@ -69,7 +69,7 @@
             <span>Tools: </span>GitHub Pages, VS Code, REST API
           </p>
           <div class="link">
-            <a class="project-link" href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank">Live Page</a>
+            <a class="project-link" href="https://alana-nanz.github.io/github-repo-gallery/" target="_blank">View Project</a>
           </div>
         </div>
         <div class="project">
@@ -81,7 +81,7 @@
             <span>Tools: </span>WordPress
           </p>
           <div class="link">
-            <a class="project-link" href="https://covpcfm.com/covenant/" target="_blank">Live Page</a>
+            <a class="project-link" href="https://covpcfm.com/covenant/" target="_blank">View Project</a>
           </div>
         </div>
         <div class="project">
@@ -93,7 +93,7 @@
             <span>Tools: </span>JSON, GitHub Pages, CodeSandbox, REST API
           </p>
           <div class="link">
-            <a class="project-link" href="https://alana-nanz.github.io/guess-the-word/" target="_blank">Live Page</a>
+            <a class="project-link" href="https://alana-nanz.github.io/guess-the-word/" target="_blank">View Project</a>
           </div>
         </div>
         <div class="project">
@@ -105,7 +105,7 @@
             <span>Tools: </span>CodeSandbox, Props, State
           </p>
           <div class="link">
-            <a class="project-link" href="https://guowmg.csb.app/" target="_blank">Live Page</a>
+            <a class="project-link" href="https://guowmg.csb.app/" target="_blank">View Project</a>
           </div>
         </div>
         <div class="project">
@@ -117,7 +117,7 @@
             <span>Tools: </span>Photoshop, VS Code, Chrome DevTools, GitHub
           </p>
           <div class="link">
-            <a class="project-link" href="https://alana-nanz.github.io/rogue-pickings/" target="_blank">Live Page</a>
+            <a class="project-link" href="https://alana-nanz.github.io/rogue-pickings/" target="_blank">View Project</a>
           </div>
         </div>
       </div>
