--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
         <address>
           <p class="contact-info">386-793-6423
             <br>
-            <a id="email" href="mailto:readalana@gmail.com">readalana@gmail.com</a>
+            <a id="link" href="mailto:readalana@gmail.com">readalana@gmail.com</a>
+            <br>
+            <a id="link" href="img/resume.pdf" target="_blank">Resume</a>
           </p>
         </address>
       </div>
