Changed unplugged project photo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h3>Projects</h3>
       <div class="project-wrapper">
         <div class="project">
-          <a href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank"><img src="img/unplugged_screenshot.png" alt="website screenshot"></a>
+          <a href="https://alana-nanz.github.io/unplugged-retreat/" target="_blank"><img src="img/unplugged.png" alt="website screenshot"></a>
           <h4>Unplugged Retreat Website</h4>
           <p class="description">A multi-page responsive website for a retreat center. This versatile design with several sections is built with Flexbox and can be repurposed for different sites.</p>
           <p class="skills">
