--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
       <h3>Skills</h3>
       <h5>Developer Skills</h5>
       <div class="skills-wrapper">
-        <p class="skill">React</p>
-        <p class="skill">JavaScript</p>
-        <p class="skill">Git & GitHub</p>
         <p class="skill">HTML5 & CSS</p>
-        <p class="skill">Responsive Web Development</p>
+        <p class="skill">JavaScript</p>
+        <p class="skill">React</p>
+        <p class="skill">Git & GitHub</p>
+        <p class="skill">Responsive Design</p>
         <p class="skill">APIs</p>
 
       </div>
@@ -129,8 +129,6 @@
         <p class="skill">Chrome DevTools</p>
         <p class="skill">Visual Studio Code</p>
         <p class="skill">WordPress</p>
-        <p class="skill">Code Sandbox</p>
-        <p class="skill">CodePen</p>
       </div>
     </section>
     <section id="about">
