Added Drupal to skills

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         <p class="skill">Chrome DevTools</p>
         <p class="skill">Visual Studio Code</p>
         <p class="skill">WordPress</p>
+        <p class="skill">Drupal</p>
       </div>
     </section>
     <section id="about">
