Added PHP to skills

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <p class="skill">Git & GitHub</p>
         <p class="skill">Responsive Design</p>
         <p class="skill">APIs</p>
+        <p class="skill">PHP - Learning in Progress!</p>
 
       </div>
       <h5>Tech Stack</h5>
