Changed text in Meet Me footer

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="contact-section">
         <h4 class="contact-heading">Meet me</h4>
         <p  class="contact-info">Raleigh, NC<br>
-        Let's grab coffee <br>or go to a meetup!</p>
+        Let's grab coffee <br>virtually or in-person!</p>
       </div>
     </div>
     <div id="copyright">
