Changed intro to Web Developer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </nav>
       <div class="intro">
         <h1 id="introduction">Hi! I'm Alana Nanz.</h1>
-        <h2>I'm a Front End Developer who writes clean, elegant and efficient code. Welcome to my portfolio!</h2>
+        <h2>I'm a Web Developer who writes clean, elegant and efficient code. I specialize in front end development and responsive design. Welcome to my portfolio!</h2>
       </div>
     </div>
   </header>
